# jaxcmr

./: .gitignore  2026_01_21.pptx  AGENTS.md  LICENSE  README.md  _quarto.yml  apa.csl  build-docs.sh  control_pass_7.docx  directory_structure.txt  generate_directory_tree.sh  index.ipynb  index.md  index.qmd  main.tex  pyproject.toml  references.bib  requirements.txt  scratch.md  settings.ini  setup.py
_proc/: context.html.md  context.ipynb  index.ipynb  sidebar.yml  sidebar.yml.bak
analyses/: importing-data.qmd  index.qmd
blog/: index.qmd
cmr_mlx/: cmr.py  context.py  likelihood.py  memory.py  scipy_de.py  simulation.py  typing.py
concepts/: context.qmd  data-format.qmd  index.qmd  linear-memory.qmd  parameters.qmd
data/: BroitmanKahana2024.h5  Dupertuys2026.h5  Dupertuys2026_semantic_distances.npy  Gordon2021.h5  GordonRanschburg2021.h5  HealyKahana2014.h5  HowardKahana2005.h5  IntrusionFreeGordon2021.h5  Lohnas2025.h5  LohnasKahana2014.h5  Murdock1962.h5  MurdockOkada1970.h5  RepeatedRecallsLohnasKahana2014.h5  TalmiEEG.h5  VRT_clip_embeddings.npy  VRT_clips.h5  al1-all-mpnet-base-v2.npy  al1-sentence-t5-xxl.npy  al1-sentences-all-mpnet-base-v2.npy  al1-sentences-sentence-t5-xxl.npy  al1.h5  base_cmr_parameters.json  base_instance_cmr_parameters.json  emotion_features_7col.npy  peers-average_word_embeddings_glove.6B.300d.npy  sentence_al1.h5  updated_al1.h5  wordpool_ltpFR3.txt
dev/: Numba_Neighbor_Contiguity.ipynb  cmrt_accessibility.py  instance_cmr.ipynb  repneighborcrp_ij12_strong_control.ipynb  repneighborcrp_j1_strong_control.ipynb
docs/: index.html  listings.json  robots.txt  search.json  sitemap.xml
docs_src/: backrepcrp.ipynb  backreplagrank.ipynb  cat_lpp_by_recall.ipynb  cat_lpp_spc.ipynb  cat_recall_by_lpp.ipynb  cat_spc.ipynb  cleanbackrepcrp.ipynb  cmr.ipynb  compound_cueing_crp.ipynb  conditional_corec_by_cat.ipynb  conditional_corec_by_lag.ipynb  conditional_crp.ipynb  conditional_distcrp.ipynb  crp.ipynb  cue_centered_crp.ipynb  cue_centered_lagrank.ipynb  distcrp.ipynb  intrusion_error_rate.ipynb  joint_corec_by_lag.ipynb  lagrank.ipynb  log_odds_crp.ipynb  nth_item_recall.ipynb  omission_error_rate.ipynb  order_error_rate.ipynb  pnr.ipynb  relative_srac.ipynb  repcrp.ipynb  replagrank.ipynb  repneighborcrp.ipynb  repsrac.ipynb  rpl.ipynb  serialrepcrp.ipynb  serialreplagrank.ipynb  spc.ipynb  (+3 more)
(+2703 files in other folders)
