[project]
name = "cmr-mlx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.12.1",
    "ipykernel>=6.29.5",
    "jax>=0.4.38",
    "jaxtyping>=0.2.36",
    "scipy==1.13.1",
    "simple-pytree>=0.2.2",
    "tqdm>=4.67.1",
]
