[project]
name = "jaxcmr"
version = "0.1.1"
description = "modeling memory search with jax"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.12.1",
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "jax>=0.4.38",
    "jaxtyping>=0.2.36",
    "jupytext>=1.16.7",
    "line-profiler>=4.2.0",
    "markdown>=3.7",
    "nbdev>=2.3.37",
    "numba>=0.61.0",
    "papermill>=2.6.0",
    "psifr>=0.9.3",
    "pytest>=8.3.5",
    "scipy==1.15.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    "simple-pytree>=0.2.2",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]

[tool.hatch.build.targets.wheel]
    packages = ["jaxcmr"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
