[project]
name = "jaxcmr"
version = "0.1.1"
description = "modeling memory search with jax"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Jordan Gunn", email = "gunnjordanb@gmail.com" }]
urls = { "Homepage" = "https://githubpsyche.github.io/jaxcmr/", "Source" = "https://github.com/githubpsyche/jaxcmr" }
keywords = ["memory", "free recall", "serial recall", "jax"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "h5py>=3.12.1",
    "jax>=0.4.38",
    "jaxtyping>=0.2.36",
    "numba>=0.61.0",
    "scipy==1.15.0",
    "simple-pytree>=0.2.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.31.0",
    "jupytext>=1.16.7",
    "line-profiler>=4.2.0",
    "nbdev>=2.3.37",
    "papermill>=2.6.0",
    "psifr>=0.9.3",
    "pytest>=8.3.5",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.0",
    ]

[tool.hatch.build.targets.wheel]
    packages = ["jaxcmr"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
